yat2man should recognize -- (en-dash) and --- (em-dash) in the input and output as such.
Description
Description
Revisions and Commits
Revisions and Commits
rG GnuPG | |||
rGc2812a9bbc35 doc: Fix to avoid using en-dash for command options. | |||
rE libgpg-error | |||
rE260f709413d8 yat2m: No en-dash and em-dash for @item line. | |||
rE82a8e2cece08 yat2m: Support Texinfo input -- and ---. | |||
rEc57e1b1435e6 yat2m: Interpret -- and --- verbatimly in @example. |
Status | Assigned | Task | ||
---|---|---|---|---|
Resolved | • gniibe | T6674 doc: U+2010 HYPHEN vs. U+002D HYPHEN-MINUS for man pages | ||
Resolved | • gniibe | T6746 yat2man: Support -- and --- |