yat2m: Support Texinfo input -- and ---.

* doc/yat2m.c (proc_texi_buffer): Handle en-dash and em-dash.

--

GnuPG-bug-id: 6746
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>